d0012 error implementation