@@ -21,12 +21,10 @@ package org.trancecode.xproc.binding;
 
 import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
-
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import javax.xml.transform.Source;
-
 import net.sf.saxon.s9api.XdmNode;
+import org.apache.commons.lang.StringUtils;
 import org.trancecode.api.Immutable;
 import org.trancecode.xml.Jaxp;
 import org.trancecode.xml.Location;
@@ -46,11 +44,9 @@ public class DocumentPortBinding extends AbstractPortBinding
     public DocumentPortBinding(final String href, final Location location)
     {
         super(location);
-        try
-        {
-            final URL url = new URL(href);
-        }
-        catch(final MalformedURLException e)
+        final URI uri = URI.create(href);
+        if (uri.getScheme()!=null && !StringUtils.equals("file",uri.getScheme()) &&
+            !StringUtils.equals("http",uri.getScheme()))
         {
             throw XProcExceptions.xd0012(location, href);
         }
